Temporary fix to Theme panel hiding behind game

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ button {
 
 body {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: auto 1fr auto;
   height: 100vh;
   width: 100vw;
   color: var(--color-text);
